# visualai_edualttech

./: .env.example  .gitignore  README.md  docker-compose.yml  vercel.json  zeabur.json
api/: index.py  requirements.txt
backend/: .env.vercel  .gitignore  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: main.py
backend/app/api/: chat.py  models.py  tokenize.py  visualize.py
backend/app/core/: config.py
backend/app/models/: database.py
backend/app/schemas/: chat.py
backend/app/services/: ai_service.py
frontend/: .gitignore  build_output.txt  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx  loading.tsx  page.tsx
frontend/src/app/(dashboard)/agent-builder/: page.tsx
frontend/src/app/(dashboard)/api-page/: page.tsx
frontend/src/app/(dashboard)/dashboard-page/: page.tsx
frontend/src/app/(dashboard)/learn/: page.tsx
frontend/src/app/(dashboard)/models/: page.tsx
frontend/src/app/(dashboard)/playground/attention/: page.tsx
frontend/src/app/(dashboard)/playground/chat/: page.tsx
frontend/src/app/(dashboard)/simulator/: page.tsx
frontend/src/app/(dashboard)/visualizations/: page.tsx
frontend/src/components/: PingProvider.tsx  ThemeProvider.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Icons.tsx  Input.tsx  Modal.tsx  Progress.tsx  Skeleton.tsx  Tabs.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
(+10 files in other folders)
