[project]
name = "neuralflow-backend"
version = "0.1.0"
description = "NeuralFlow AI Visualization Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.1",
    "openai>=1.54.0",
    "anthropic>=0.44.0",
    "google-genai>=1.2.0",
    "tiktoken>=0.8.0",
    "numpy>=2.1.0",
]

[project.scripts]
neuralflow = "app.main:start"
